turtleart.polygon7.Polygon7.scala.error
Compilation error:
Polygon7:1: error: Missing closing brace `}' assumed here
override def run() {
^Polygon7:1: error: expected start of definition
override def run() {
         ^